change in home and styles

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -974,7 +974,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.2s">
-                <h3><img src="assets/img/logo1.png" alt=""></h3>
+                <h3><img src="assets/img/logo.png" alt="" style="
+                  width: 90px;
+                  height: 90px;
+              "></h3>
 
             </div>
             <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.4s">
@@ -988,38 +991,24 @@
                     <li><a href="#">Legality</a></li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
-                <h3>RECENT POSTS</h3>
-                <ul class="image-list">
-                    <li>
-                        <figure class="overlay">
-                            <img class="img-fluid" src="assets/img/art/a1.jpg" alt="">
-                        </figure>
-                        <div class="post-content">
-                            <h6 class="post-title"> <a href="blog-single.html">Lorem ipsm dolor sumit.</a> </h6>
-                            <div class="meta"><span class="date">October 12, 2018</span></div>
-                        </div>
-                    </li>
-                    <li>
-                        <figure class="overlay">
-                            <img class="img-fluid" src="assets/img/art/a2.jpg" alt="">
-                        </figure>
-                        <div class="post-content">
-                            <h6 class="post-title"><a href="blog-single.html">Lorem ipsm dolor sumit.</a></h6>
-                            <div class="meta"><span class="date">October 12, 2018</span></div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+
 
             <!-- /.widget -->
             <div class="widget">
                 <h5 class="widget-title">FOLLOW US ON</h5>
                 <ul class="footer-social">
-                    <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
-                    <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
-                    <li><a class="linkedin" href="#"><i class="lni-linkedin-filled"></i></a></li>
-                    <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
+                    <li><a class="facebook" style="
+                      width: 62px;
+                      height: 62px; " href="#"><i class="lni-facebook-filled" ></i></a></li>
+                    <li><a class="twitter" href="#" style="
+                      width: 62px;
+                      height: 62px; "><i class="lni-twitter-filled"></i></a></li>
+                    <li><a class="linkedin" href="#" style="
+                      width: 62px;
+                      height: 62px; "><i class="lni-instagram-filled"></i></a></li>
+                    <li><a class="google-plus" href="#" style="
+                      width: 62px;
+                      height: 62px; "><i class="lni-google-plus"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -1033,7 +1022,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="site-info">
-                    <p>© Designed and Developed by <a href="http://uideck.com" rel="nofollow">UIdeck</a></p>
+                    <p>© Poker Sports League</p>
                 </div>
             </div>
         </div>
