--- a/src/app/team-members/team-members.component.html
+++ b/src/app/team-members/team-members.component.html
@@ -1,4 +1,24 @@
-<app-navigation></app-navigation>
+<header id="header-wrap">
+    <app-navigation></app-navigation>
+    <!-- Main Carousel Section Start -->
+    <div id="main-slide" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+            <div class="team-banner">
+                <img class="d-block w-100" style="
+                opacity: 0.8;" src="assets/img/background/team-banner.jpg" alt="First slide">
+                <div class="carousel-caption d-md-block">
+                    <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
+                    <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now!</a>
+                    <a href="#" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login</a>
+                </div>
+            </div>
+
+        </div>
+        <!-- Main Carousel Section End -->
+    </div>
+</header>
 <!-- Team Section Start -->
 <section id="team" class="section-padding text-center team-core">
     <div class="container">
