--- a/src/styles.css
+++ b/src/styles.css
@@ -120,7 +120,7 @@ ol li {
     bottom: 8px;
     width: 48px;
     height: 1px;
-    background-color: #E91E63;
+    background-color: #16253c;
 }
 
 .section-title:after {
@@ -130,7 +130,7 @@ ol li {
     bottom: 2px;
     width: 48px;
     height: 1px;
-    background-color: #E91E63;
+    background-color: #16253c;
 }
 
 .section-title:before,
@@ -175,7 +175,7 @@ ol li {
     bottom: 10px;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-    background-color: #E91E63;
+    background-color: #16253c;
 }
 
 .subtitle {
@@ -230,14 +230,14 @@ ol li {
 }
 
 .btn-common {
-    background-color: #E91E63;
+    background-color: #16253c;
     position: relative;
     z-index: 1;
 }
 
 .btn-common:hover {
     color: #fff;
-    background: #F50057;
+    background: #4c516d;
     box-shadow: 0 6px 22px rgba(0, 0, 0, 0.1);
     transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -272,7 +272,7 @@ button:focus {
 
 .icon-close,
 .icon-check {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .bg-drack {
@@ -309,7 +309,7 @@ a.back-to-top i {
     height: 40px;
     line-height: 40px;
     color: #fff;
-    background: #E91E63;
+    background: #16253c;
     border-radius: 0px;
     text-align: center;
     transition: all 0.2s ease-in-out;
@@ -356,7 +356,7 @@ a.back-to-top:focus {
     margin: 0 auto;
     width: 15%;
     height: 15%;
-    background-color: #E91E63;
+    background-color: #16253c;
     border-radius: 100%;
     -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
     animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
@@ -618,7 +618,7 @@ a.back-to-top:focus {
 }
 
 #roof .quick-contacts span a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 #roof .quick-contacts span i {
@@ -633,7 +633,8 @@ a.back-to-top:focus {
 }
 
 .navbar-brand img {
-    width: 75%;
+    width: 76px;
+    height: 76px;
 }
 
 .top-nav-collapse {
@@ -648,8 +649,7 @@ a.back-to-top:focus {
     animation-fill-mode: both;
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
-    /*background: #fff !important;*/
-    background-image: linear-gradient(#170a45, #110573);
+    background: #16253c !important;
 }
 
 .top-nav-collapse .navbar-brand {
@@ -657,15 +657,15 @@ a.back-to-top:focus {
 }
 
 .top-nav-collapse .navbar-nav .nav-link {
-    color: #212121 !important;
+    color: white !important;
 }
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
-    color: #E91E63 !important;
+    color: wheat !important;
 }
 
 .top-nav-collapse .navbar-nav li.active a.nav-link {
-    color: #E91E63 !important;
+    color: wheat !important;
 }
 
 .indigo {
@@ -694,7 +694,7 @@ a.back-to-top:focus {
     margin-left: -10px;
     width: 15px;
     height: 2px;
-    background: #E91E63;
+    background: #16253c;
     -webkit-transform: scale3d(0, 1, 1);
     -moz-transform: scale3d(0, 1, 1);
     transform: scale3d(0, 1, 1);
@@ -718,13 +718,13 @@ a.back-to-top:focus {
 .navbar-expand-lg .navbar-nav li a:hover,
 .navbar-expand-lg .navbar-nav li .active>a,
 .navbar-expand-lg .navbar-nav li a:focus {
-    color: #E91E63;
+    color: #16253c;
     outline: none;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:focus,
 .navbar-expand-lg .navbar-nav .nav-link:hover {
-    color: #E91E63 !important;
+    color: #16253c !important;
 }
 
 .navbar {
@@ -732,7 +732,7 @@ a.back-to-top:focus {
 }
 
 .navbar li.active a.nav-link {
-    color: #E91E63 !important;
+    color: #16253c !important;
 }
 
 .dropdown-toggle::after {
@@ -817,7 +817,7 @@ a.back-to-top:focus {
 .dropdown .dropdown-item:focus,
 .dropdown .dropdown-item:hover,
 .dropdown .dropdown-item.active {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .dropdown-item.active,
@@ -831,11 +831,11 @@ a.back-to-top:focus {
 }
 
 .slicknav_btn {
-    border-color: #E91E63;
+    border-color: #16253c;
 }
 
 .slicknav_menu .slicknav_icon-bar {
-    background: #E91E63;
+    background: #16253c;
 }
 
 
@@ -878,17 +878,17 @@ a.back-to-top:focus {
         display: block;
     }
     .slicknav_nav .active a {
-        background: #E91E63;
+        background: #16253c;
         color: #fff;
     }
     .slicknav_nav a:hover,
     .slicknav_nav .active {
-        color: #E91E63;
+        color: #16253c;
         background: #f5f5f5;
     }
     .slicknav_nav .dropdown li a.active {
         background: #f5f5f5;
-        color: #E91E63;
+        color: #16253c;
     }
 }
 
@@ -915,7 +915,7 @@ a.back-to-top:focus {
 }
 
 .about-item .about-text h3 a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .about-item .about-text .btn {
@@ -953,7 +953,7 @@ a.back-to-top:focus {
 }
 
 .counter-section {
-    background: #E91E63;
+    background: #16253c;
     overflow: hidden;
     position: relative;
     /*
@@ -1052,8 +1052,8 @@ a.back-to-top:focus {
 .schedule .schedule-tab-title .nav-tabs .nav-item.show .nav-link,
 .schedule .schedule-tab-title .nav-tabs .nav-link.active,
 .schedule .schedule-tab-title .nav-tabs .nav-item .nav-link:hover {
-    background: #E91E63;
-    border: 1px solid #E91E63;
+    background: #16253c;
+    border: 1px solid #16253c;
     transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
     -webkit-transition: all 0.3s ease-in-out 0s;
@@ -1152,7 +1152,7 @@ a.back-to-top:focus {
 }
 
 .schedule .card-body .location span {
-    color: #E91E63;
+    color: #16253c;
     margin-right: 5px;
 }
 
@@ -1189,7 +1189,7 @@ a.back-to-top:focus {
 }
 
 .accordion .card-header i {
-    color: #E91E63;
+    color: #16253c;
     width: 40px;
     height: 40px;
     display: inline-block;
@@ -1280,7 +1280,7 @@ a.back-to-top:focus {
 
 .services-item:hover .icon i {
     background: transparent;
-    color: #E91E63;
+    color: #16253c;
 }
 
 
@@ -1312,7 +1312,7 @@ a.back-to-top:focus {
 
 #gallery .gallery-box .overlay-box i {
     background: #ffffff;
-    color: #E91E63;
+    color: #16253c;
     font-size: 30px;
     width: 50px;
     height: 50px;
@@ -1332,7 +1332,7 @@ a.back-to-top:focus {
 }
 
 #gallery .gallery-box:hover .overlay-box {
-    background: rgba(233, 30, 99, 0.7);
+    background: rgba(80, 69, 243, 0.7);
     transform: scale(1, 1);
     transition: all 500ms ease;
 }
@@ -1457,7 +1457,7 @@ a.back-to-top:focus {
     color: #fff;
     width: 36px;
     height: 36px;
-    background: #E91E63;
+    background: #16253c;
     display: block;
     border-radius: 4px;
     line-height: 36px;
@@ -1476,7 +1476,7 @@ a.back-to-top:focus {
 }
 
 .team-item .overlay-social-icon .social-icons li a:hover .fa-instagram {
-    background: #fb3958;
+    background: #16253c;
 }
 
 .team-item .info-text {
@@ -1500,7 +1500,7 @@ a.back-to-top:focus {
 }
 
 .team-item .info-text h3 a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .team-item .info-text p {
@@ -1554,7 +1554,7 @@ a.back-to-top:focus {
     left: 20px;
     padding: 4px 27px;
     background-color: white;
-    color: #E91E63;
+    color: #16253c;
     border-radius: 4px;
     display: block;
     font-size: 14px;
@@ -1584,7 +1584,7 @@ a.back-to-top:focus {
 }
 
 .blog-item .descr h3 a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .blog-item .descr .meta-tags {
@@ -1602,7 +1602,7 @@ a.back-to-top:focus {
 }
 
 .blog-item .descr .meta-tags span a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .blog-item:hover {
@@ -1707,7 +1707,7 @@ a.back-to-top:focus {
 .subscribe-inner .form-control {
     position: relative;
     background: #fff;
-    border: 1px solid #E91E63;
+    border: 1px solid #16253c;
     border-radius: 0px;
     box-shadow: none;
     color: #888999;
@@ -1719,7 +1719,7 @@ a.back-to-top:focus {
 .subscribe-inner .form-control:focus {
     color: #212121;
     background-color: #fff;
-    border-color: #E91E63;
+    border-color: #16253c;
     outline: 0;
 }
 
@@ -1778,7 +1778,7 @@ a.back-to-top:focus {
 .container-form .form-wrapper .form-control:focus {
     color: #212121;
     background-color: #fff;
-    border-color: #E91E63;
+    border-color: #16253c;
     box-shadow: none;
     outline: 0;
 }
@@ -1789,7 +1789,7 @@ a.back-to-top:focus {
 
 .list-unstyled li {
     margin-top: 10px;
-    color: #dc3545 !important;
+    color: #16253c !important;
 }
 
 .text-danger {
@@ -1816,7 +1816,7 @@ a.back-to-top:focus {
 }
 
 .form-control:focus {
-    border-color: #E91E63;
+    border-color: #16253c;
     box-shadow: none;
     outline: 0;
 }
@@ -1851,7 +1851,7 @@ a.back-to-top:focus {
 }
 
 .footer-area ul li a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .footer-area .footer-social li {
@@ -1867,7 +1867,8 @@ a.back-to-top:focus {
     display: block;
     text-align: center;
     border-radius: 4px;
-    font-size: 15px;
+    padding: 12px;
+    font-size: 30px;
     margin-right: 5px;
     transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
@@ -1888,7 +1889,7 @@ a.back-to-top:focus {
 }
 
 .footer-area .footer-social li .linkedin:hover {
-    background: #0073b1;
+    background: #5339da;
 }
 
 .footer-area .footer-social li .foursqare:hover {
@@ -1906,7 +1907,7 @@ a.back-to-top:focus {
 }
 
 .footer-area .footer-text p a {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .footer-area .footer-text .nav-inline .nav-link {
@@ -1915,7 +1916,7 @@ a.back-to-top:focus {
 }
 
 .footer-area .footer-text .nav-inline .nav-link:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .image-list {
@@ -1960,7 +1961,7 @@ a.back-to-top:focus {
 }
 
 .image-list .post-content .post-title a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 .image-list .post-content .meta {
@@ -1994,13 +1995,15 @@ a.back-to-top:focus {
 }
 
 .widget {
-    margin-top: 10px;
+    margin-top: 2%;
+    margin-inline-start: 35%;
 }
 
 .widget .widget-title {
     margin-bottom: 20px;
     font-size: 18px;
     color: #fff;
+    text-align: center;
 }
 
 #copyright {
@@ -2019,7 +2022,7 @@ a.back-to-top:focus {
 }
 
 #copyright p a:hover {
-    color: #E91E63;
+    color: #16253c;
 }
 
 
@@ -2129,7 +2132,7 @@ a.back-to-top:focus {
 
 #pricing .price-block-wrapper .icon i {
     font-size: 60px;
-    color: #E91E63;
+    color: #16253c;
 }
 
 #pricing .price-block-wrapper .colmun-title {
@@ -2191,7 +2194,7 @@ a.back-to-top:focus {
 #pricing .price-block-wrapper .pricing-list ul li i {
     margin-right: 7px;
     font-size: 12px;
-    color: #E91E63;
+    color: #16253c;
 }
 
 #pricing .price-block-wrapper .btn i {
@@ -2218,6 +2221,11 @@ a.back-to-top:focus {
     animation-fill-mode: both;
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
+}
+
+.team-banner {
+    width: 100%;
+    height: 650px;
 }
 
 #main-slide .carousel-item img {
