--- a/src/styles.css
+++ b/src/styles.css
@@ -694,7 +694,7 @@ a.back-to-top:focus {
     margin-left: -10px;
     width: 15px;
     height: 2px;
-    background: #16253c;
+    background: white;
     -webkit-transform: scale3d(0, 1, 1);
     -moz-transform: scale3d(0, 1, 1);
     transform: scale3d(0, 1, 1);
@@ -718,13 +718,13 @@ a.back-to-top:focus {
 .navbar-expand-lg .navbar-nav li a:hover,
 .navbar-expand-lg .navbar-nav li .active>a,
 .navbar-expand-lg .navbar-nav li a:focus {
-    color: #16253c;
+    color: white;
     outline: none;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:focus,
 .navbar-expand-lg .navbar-nav .nav-link:hover {
-    color: #16253c !important;
+    color: white !important;
 }
 
 .navbar {
@@ -732,7 +732,7 @@ a.back-to-top:focus {
 }
 
 .navbar li.active a.nav-link {
-    color: #16253c !important;
+    color: white !important;
 }
 
 .dropdown-toggle::after {
