--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,5 +1,27 @@
 <!-- Blog Section Start -->
-<app-navigation></app-navigation>
+<!--  Section Start -->
+<header id="header-wrap">
+    <app-navigation></app-navigation>
+    <!-- Main Carousel Section Start -->
+    <div id="main-slide" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+            <div class="team-banner">
+                <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
+                <div class="carousel-caption d-md-block">
+                    <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
+                    <p class="fadeInUp wow" data-wow-delay=".6s">Blogs</p>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
+                    <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now!</a>
+                    <a href="#" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login</a>
+
+                </div>
+            </div>
+
+        </div>
+        <!-- Main Carousel Section End -->
+    </div>
+</header>
 <section id="blog" class="section-padding">
     <div class="container">
         <div class="row">
