--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -695,7 +695,7 @@
         </div>
         <div class="row justify-content-center mt-3">
             <div class="col-xs-12">
-                <a href="#" class="btn btn-common">Browse All</a>
+                <a routerLink="/gallery" routerLinkActive="router-link-active" href='#top' class="btn btn-common">Browse All</a>
             </div>
         </div>
     </div>
@@ -895,9 +895,7 @@
                     <a href="#"><img class="img-fluid" src="assets/img/sponsors/Big-dady.png" alt=""></a>
                 </div>
             </div>
-            <div class="col-12 text-center">
-                <a href="#" class="btn btn-common">become a sponsor</a>
-            </div>
+
         </div>
     </div>
 </section>
