--- a/src/app/psl-team/psl-team.component.html
+++ b/src/app/psl-team/psl-team.component.html
@@ -9,6 +9,7 @@
                 <div class="carousel-caption d-md-block">
                     <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">PSL Teams</h1>
                     <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now!</a>
                     <a href="#" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login</a>
                 </div>
