--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,8 +14,12 @@
                 <div class="carousel-caption d-md-block">
                     <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
-                    <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now!</a>
-                    <a href="#" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login</a>
+        
+                    <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
+                    
+                    <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
+                            <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
+                    </div>
                 </div>
             </div>
             <div class="carousel-item">
@@ -23,7 +27,7 @@
                 <div class="carousel-caption d-md-block">
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
                     <h1 class="wow bounceIn heading" data-wow-delay=".7s">#Poker Coming Soon</h1>
-                    <a href="#" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s">Learn More</a>
+                    <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -31,7 +35,8 @@
                 <div class="carousel-caption d-md-block">
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
                     <h1 class="wow fadeInUp heading" data-wow-delay=".6s">Register Now for Season 3</h1>
-                    <a href="#" class="fadeInUp wow btn btn-common btn-lg" data-wow-delay=".8s">Register Now!</a>
+                    
+                    <a href="javascript:void(0);" class="fadeInUp wow btn btn-common btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
                 </div>
             </div>
         </div>
@@ -44,6 +49,15 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <div style="display:none" id="divshow2">
+            <app-login></app-login>
+        </div>
+        <div style="display:none" id="divreg">
+            <app-register></app-register>
+        </div>
+        <div style="display:none" id="divfp">
+            <app-forgot-password></app-forgot-password>
+        </div>
     <!-- Main Carousel Section End -->
 
 </header>
@@ -62,7 +76,7 @@
                 <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
                     <div id="clock" class="time-count"></div>
                 </div>
-                <a href="pricing.html" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a>
+                <!--a href="pricing.html" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a-->
             </div>
         </div>
     </div>
