--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -5,7 +5,7 @@ bottom: 0;
 left: 0;
 right: 0;
 background: rgba(90, 90, 90, 0.5);
-z-index: 9999;
+z-index: 99999999;
 width:100% !important">
     <div class="row">
         <div class=" mt-5 mx-auto style-terms">
