--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -107,34 +107,75 @@
         <div class="row">
             <div class="col-xs-12 col-md-6 col-lg-4">
                 <div class="about-item">
-                    <img class="img-fluid" src="assets/img/about/img1.jpg" alt="">
+                    <img class="img-fluid" src="https://www.dabur.com/img/article/11-mr.-amit-burman.jpg" style="width:100%;height:250px" alt="">
+                     <div class="card">
+                        <div class="card-header" id="headingOne">
+							<b>Amit Burman, Co-founder and Invester</b><br>Amit Burman is the chairman of Dabur group. He is one of the prime invester of PSL. <div id="amit_burman" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                                Mr. Amit Burman is responsible for Dabur India's foray into processed foods business with the setting up of Dabur Foods Ltd. It is to Amit's credit today that Dabur Real and Hommade are household names. He is also responsible for driving all business strategy, development and communications at Dabur Foods.
+                        </div>
+                            <div class="header-title" data-toggle="collapse" data-target="#amit_burman" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                               <span style="color:blue;">Read more</span>
+                            </div>
+                        </div>
+                    </div>
+<!--
                     <div class="about-text">
                         <h3><a href="#">Our Mission</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetuer commodo ligula eget dolor.</p>
                         <a class="btn btn-common btn-rm" routerLink="/about-mission" routerLinkActive="router-link-active" href='#top'>Read More</a>
                     </div>
+-->
                 </div>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-4">
                 <div class="about-item">
-                    <img class="img-fluid" src="assets/img/about/img2.jpg" alt="">
+                    <img class="img-fluid" src="assets/img/team/team-01.jpg" style="width: 100%;height:250px" alt="">
+                    <div class="card">
+                        <div class="card-header" id="headingOne">
+							<b>Pranav Bagai, CEO and Co-Founder</b><br>Pranav Bagai CEO of PSL. He is one of the prime invester of PSL. Lorem ipsum dolor sit amet . <div id="pranav_bagai" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                                Mr. Bagai is responsible for all operations and management of PSL . 
+                        </div>
+                            <div class="header-title" data-toggle="collapse" data-target="#pranav_bagai" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                               <span style="color:blue;">Read more</span>
+                            </div>
+                        </div>
+                    </div>
+<!--
                     <div class="about-text">
                         <h3><a href="#">Our Vision</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetuer commodo ligula eget dolor.</p>
                         <a class="btn btn-common btn-rm" routerLink="/about-vision" routerLinkActive="router-link-active" href='#top'>Read More</a>
                     </div>
+-->
                 </div>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-4">
                 <div class="about-item">
-                    <img class="img-fluid" src="assets/img/about/img3.jpg" alt="">
+                    <img class="img-fluid" src="assets/img/team/goindi.jpg" style="width: 100%;height:250px" alt="">
+                     <div class="card">
+                        <div class="card-header" id="headingOne">
+							<b>Abhishek Goindi, COO and Pro Player </b><br>Abhishek Goindi is C00 of PSL. He is one of the prime invester of PSL. Lorem ipsum dolor sit amet . <div id="a_g" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                                Mr. Bagai is responsible for all operations and management of PSL . 
+                        </div>
+                            <div class="header-title" data-toggle="collapse" data-target="#a_g" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                               <span style="color:blue;">Read more</span>
+                            </div>
+                        </div>
+                    </div>
+<!--
                     <div class="about-text">
                         <h3><a href="#">Our Team</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetuer commodo ligula eget dolor.</p>
                         <a class="btn btn-common btn-rm" routerLink="/team-members" routerLinkActive="router-link-active" href='#top'>Read More</a>
                     </div>
+-->
                 </div>
             </div>
+            <div style="height:100%;width:100%;text-align:center;padding:10px">
+				<a class="btn btn-common btn-rm" routerLink="/about-mission" routerLinkActive="router-link-active" href='#top'>Our Mission</a>&nbsp;&nbsp;
+				<a class="btn btn-common btn-rm" routerLink="/about-vision" routerLinkActive="router-link-active" href='#top'>Our Vision</a>&nbsp;&nbsp;
+				<a class="btn btn-common btn-rm" routerLink="/team-members" routerLinkActive="router-link-active" href='#top'>Our Team</a>&nbsp;&nbsp;
+             </div>
         </div>
     </div>
 </section>
