--- a/src/styles.css
+++ b/src/styles.css
@@ -718,7 +718,7 @@ a.back-to-top:focus {
 .navbar-expand-lg .navbar-nav li a:hover,
 .navbar-expand-lg .navbar-nav li .active>a,
 .navbar-expand-lg .navbar-nav li a:focus {
-    color: white;
+    color: blue;
     outline: none;
 }
 
@@ -1729,6 +1729,53 @@ a.back-to-top:focus {
     margin: 0 auto;
     width: 100%;
 }
+
+ /*-- floating icon --*/ 
+
+ #mySidenav a {
+    position: fixed;
+    right: 11px;
+    transition: 0.3s;
+    padding: 15px;
+   
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    border-radius: 15px;
+    
+  }
+
+  .levitate{
+    animation: levitate 3s ease-out infinite normal;
+  }
+  @keyframes levitate{
+      0%{
+          transform: scale(0.9)
+      }
+      25%{
+        transform: scale(1)
+        }
+    60%{
+            transform: scale(0.9)
+        }
+        100%{
+            transform: scale(0.9)
+        }
+  }
+
+  #mySidenav a:hover {
+    /*right: 0;
+    -webkit-transform: rotate(360deg); /* Safari */
+    /*transform: rotate(360deg);*/
+  }
+  
+  #reg {
+    z-index: 1000;
+    top: 170px;
+  }
+  
+ /*-- floating icon --*/				
+
 /*----login------------*/
 				   
  
