--- a/src/app/mentor/mentor.component.html
+++ b/src/app/mentor/mentor.component.html
@@ -23,3 +23,42 @@
         <!-- Main Carousel Section End -->
     </div>
 </header>
+<section>
+    <div class="container matter">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="contentContainer">
+                    <div class="custom-box">
+                        <h3 class="common-heading text-center">Mentors </h3>
+                        <div class="content-box">
+                            <p style="font-size: 18px;"><em><strong>&lsquo;Mentors are captains and in game leaders. They are there to give their team leadership
+                          and a strategic edge. They make the difficult calls, assign teammates roles and events
+                          and along with the owner take key decisions for their teams.
+                          It is a demanding role, therefore, you need to meet the following minimum
+                          requirements before applying.&rsquo;</strong></em></p>
+                            <p style="text-align: justify; font-size: 16px;">1) Needs 5 years of experience as a professional poker player.</p>
+                            <p style="text-align: justify; font-size: 16px;">2) Needs to have previous leadership experience.</p>
+                            <p style="text-align: justify; font-size: 16px;">3) Needs to have played actively (500+ tournaments online) for a year.</p>
+                            <p style="text-align: justify; font-size: 16px;">4) Needs to have played at least 3000 tournaments in the last 5 years.</p>
+                            <p style="text-align: justify; font-size: 16px;">5) Needs to have at least 10 ITM’s in International fields.</p>
+                            <p style="text-align: justify; font-size: 18px;"><strong>you meet the following criteria, please submit your application <a href="#">here</a></strong> </p>
+                        </div>
+                        <!--
+                      <div class="row">
+                          <div class="col-xs-12 playVideomn">
+                              <p>&nbsp;</p>
+                              <h3 class="common-heading">Learn &amp; Play Poker With Adda52</h3>
+                              <div class="video-wrapper">
+                                  <div class="play-area"><iframe id="player" title="YouTube video player" src="https://www.youtube.com/embed/SlcpPokznhw" frameborder="0" width="100%" height="100%"></iframe></div>
+                              </div>
+                              <div class="text-center takeTutorialBtn"><a class="btn red-btn global-btn" href="/home/openGamehtml5Window/poker">PLAY</a></div>
+                          </div>
+                      </div>
+                      -->
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
