--- a/src/app/pro/pro.component.html
+++ b/src/app/pro/pro.component.html
@@ -23,3 +23,42 @@
         <!-- Main Carousel Section End -->
     </div>
 </header>
+<section>
+    <div class="container matter">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="contentContainer">
+                    <div class="custom-box">
+                        <h3 class="common-heading text-center">PRO</h3>
+                        <div class="content-box">
+                            <p style="font-size: 18px;"><em><strong>&lsquo;For Season 2, team owners have an option to retain one pro per team. The
+                              players who represented teams in Season 1, automatically make it to the pro draft for
+                              Season 2,whether they get retained or not. The exact number of open spots will be
+                              announced later. The new pro application will have the current weightage.&rsquo;</strong></em></p>
+                            <p style="text-align: justify; font-size: 18px;"><strong>A pro player is a Marquee player who is supposed to give their team a tactical edge
+                              with high skill and finesse in execution. As such the following minimum requirements
+                              need to be met before applying.</strong></p>
+                            <p style="text-align: justify; font-size: 18px;">1) Two years of experience as a professional poker player.</p>
+                            <p style="text-align: justify; font-size: 18px;">2) Playing actively for a year (800 tournaments online, 40 live, 500 tournaments a year if doing both)</p>
+
+                            <p style="text-align: justify; font-size: 18px;"><strong>If, you meet the following criteria, please submit your application <a href="#">here</a></strong> </p>
+                        </div>
+                        <!--
+                    <div class="row">
+                        <div class="col-xs-12 playVideomn">
+                            <p>&nbsp;</p>
+                            <h3 class="common-heading">Learn &amp; Play Poker With Adda52</h3>
+                            <div class="video-wrapper">
+                                <div class="play-area"><iframe id="player" title="YouTube video player" src="https://www.youtube.com/embed/SlcpPokznhw" frameborder="0" width="100%" height="100%"></iframe></div>
+                            </div>
+                            <div class="text-center takeTutorialBtn"><a class="btn red-btn global-btn" href="/home/openGamehtml5Window/poker">PLAY</a></div>
+                        </div>
+                    </div>
+                    -->
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
