--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -45,21 +45,16 @@
                     </ul>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/blogs" routerLinkActive="router-link-active" href='#top'>
-    Blog
-  </a>
 
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-  NEW'S/MEDIA
+  NEWS/MEDIA
        </a>
 
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEW'S</a></li>
+                        <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEWS</a></li>
                         <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEO'S</a></li>
-                        <li><a class="dropdown-item" href="home/#gallery">PICTURE GALLERY</a></li>
+                        <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
                         <li><a class="dropdown-item" routerLink="/previous-seasons" routerLinkActive="router-link-active" href='#top'>PREVIOUS SEASONS</a></li>
                     </ul>
                 </li>
@@ -78,13 +73,13 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown">
-    More
+    MORE
          </a>
 
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="home/#sponsors">Our PARTNERS</a></li>
+                        <li><a class="dropdown-item" href="home/#sponsors">PARTNERS</a></li>
                         <li><a class="dropdown-item" href="home/#faq">FAQ's</a></li>
-                        <li><a class="dropdown-item" href="home/#contact">Contact Us</a></li>
+                        <li><a class="dropdown-item" href="home/#contact">CONTACT US</a></li>
                     </ul>
                 </li>
 
