--- a/src/styles.css
+++ b/src/styles.css
@@ -1730,55 +1730,55 @@ a.back-to-top:focus {
     width: 100%;
 }
 
- /*-- floating icon --*/ 
 
- #mySidenav a {
+/*-- floating icon --*/
+
+#mySidenav a {
     position: fixed;
     right: 11px;
     transition: 0.3s;
     padding: 15px;
-   
     text-decoration: none;
     font-size: 20px;
     color: white;
     border-radius: 15px;
-    
-  }
+}
 
-  .levitate{
+.levitate {
     animation: levitate 3s ease-out infinite normal;
-  }
-  @keyframes levitate{
-      0%{
-          transform: scale(0.9)
-      }
-      25%{
-        transform: scale(1)
-        }
-    60%{
-            transform: scale(0.9)
-        }
-        100%{
-            transform: scale(0.9)
-        }
-  }
+}
 
-  #mySidenav a:hover {
+@keyframes levitate {
+    0% {
+        transform: scale(0.9)
+    }
+    25% {
+        transform: scale(1)
+    }
+    60% {
+        transform: scale(0.9)
+    }
+    100% {
+        transform: scale(0.9)
+    }
+}
+
+#mySidenav a:hover {
     /*right: 0;
     -webkit-transform: rotate(360deg); /* Safari */
     /*transform: rotate(360deg);*/
-  }
-  
-  #reg {
+}
+
+#reg {
     z-index: 1000;
     top: 170px;
-  }
-  
- /*-- floating icon --*/				
+}
+
+
+/*-- floating icon --*/
+
 
 /*----login------------*/
-				   
- 
 
 .login-form {
     width: 340px;
@@ -1790,17 +1790,10 @@ a.back-to-top:focus {
     background: #f7f7f7;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     padding: 30px;
-				
-				 
-			  
-			   
 }
 
 .login-form h2 {
     margin: 0 0 15px;
-
-			
-						
 }
 
 .login-form .hint-text {
@@ -1824,11 +1817,6 @@ a.back-to-top:focus {
     margin: 20px 0 10px;
     text-align: center;
     border-top: 1px solid #ccc;
-					 
-					   
-		   
-			  
-			 
 }
 
 .or-seperator i {
@@ -1844,33 +1832,23 @@ a.back-to-top:focus {
     font-size: 15px;
     text-align: left;
     line-height: 24px;
-					 
-				   
-				 
-					   
-			   
 }
 
 .social-btn .btn i {
     float: left;
     margin: 4px 15px 0 5px;
     min-width: 15px;
-			   
 }
 
 .input-group-addon .fa {
     font-size: 18px;
-						
-				   
-				
 }
 
 
 /*------------login------------------*/
 
+
 /*--//login--*/
-				   
- 
 
 .style-login {
     border-radius: 11px;
@@ -1885,17 +1863,10 @@ a.back-to-top:focus {
 
 .style-login h1 {
     color: black !important;
-						  
 }
 
 .loginlabel {
     color: black !important;
-				
-				 
-					   
-					 
-					   
-			  
 }
 
 .button {
@@ -1907,9 +1878,6 @@ a.back-to-top:focus {
 
 
 /*-- //nav login button --*/
-					
-					 
- 
 
 .nav-login-btn {
     background: none;
@@ -1932,47 +1900,20 @@ a.back-to-top:focus {
     border-radius: 20px;
     color: white;
     cursor: pointer;
-										   
-						
- 
-
-											 
     /* display: inline-block; */
     font-weight: 700;
-					  
     font-size: 14px;
     /* line-height: 2.34; */
     /* margin: 0; */
-							   
-						
-								  
     padding: 8px 20px;
     text-align: center;
-						   
-								 
 }
 
-												   
-				   
-						   
-						  
-					 
-			   
- 
 
 /*-- //nav login button --*/
-				
- 
 
-				   
-					 
-							  
- 
 
 /*-- Registration --*/
-					 
-					
- 
 
 .regButton {
     /*background-color: #4CAF50;
@@ -2003,19 +1944,11 @@ a.back-to-top:focus {
     -moz-box-shadow: 4px 4px rgba(187, 188, 189, 0.5);
 }
 
-					 
-						  
-					 
-			   
- 
 
 /*-- Registration --*/
 
-					   
 
 /*-- //close-popup --*/
-						
- 
 
 .close-popup {
     float: right;
@@ -2026,48 +1959,19 @@ a.back-to-top:focus {
 }
 
 .login-close {
-					
     color: #dc3545;
-					  
-			  
-						
 }
 
 .invalid-val {
-				
     font-size: 80%;
     color: #dc3545;
 }
 
-							
-				   
- 
 
 /*-- //close-popup --*/
-						  
- 
 
-								  
-				
-					 
-				
-				 
-					  
-				   
-					   
-					   
-				  
-					
-					  
-										
-											 
-												
-										   
- 
 
 /*-- //terms-popup --*/
-				
- 
 
 .style-terms {
     border-radius: 11px;
@@ -2089,12 +1993,9 @@ a.back-to-top:focus {
     position: fixed;
 }
 
-												
-						
- 
 
 /*-- //terms-popup --*/
-	
+
 
 /* Contact Forme */
 
@@ -2841,6 +2742,13 @@ a.back-to-top:focus {
 
 .custom-box {
     padding: 45px 45px;
+    padding: 1rem;
+    margin: 2.777rem 0;
+    background: #fff;
+    border-radius: 28px;
+    display: table;
+    box-shadow: 0 0 18px 4px rgba(0, 0, 0, .3);
+    width: 100%;
 }
 
 .content-box {
