--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -53,7 +53,7 @@
 
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEWS</a></li>
-                        <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEO'S</a></li>
+                        <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEOS</a></li>
                         <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
                         <li><a class="dropdown-item" routerLink="/previous-seasons" routerLinkActive="router-link-active" href='#top'>PREVIOUS SEASONS</a></li>
                     </ul>
