--- a/src/app/faqs/faqs.component.html
+++ b/src/app/faqs/faqs.component.html
@@ -322,7 +322,7 @@
                         </div>
                     </div>
                     <div style="text-align:center;width:100%;height:100%;padding:20px;color:#103178" >
-                        <div data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="faqex1 faqex2">
+                        <div id="faqtoggle" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="faqex1 faqex2">
                                 <p style="display: inline;font-size: 20px;cursor: pointer;" >MORE</p>&nbsp; <i style="font-size: 20px;" class="fa fa-angle-double-down"></i> 
                         </div>
                        
